# uintellagent

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: GATEWAY.md
docs/releases/: v0.3.0-alpha.1.md  v1.0.0.md  v1.0.1.md
examples/: README.md  rig_all_in_one.rs  rig_approval_policy.rs  rig_memory.rs  rig_pattern_catalog.rs  rig_tool_calling.rs  rig_visible_steps.rs
scripts/: package-release.sh
src/: confirm.rs  db_tui.rs  editor.rs  gateway.rs  godmode.rs  http_body.rs  knowledge_graph.rs  lsp.rs  main.rs  mesh.rs  permissions.rs  prompt_history.rs  provider_health.rs  providers.rs  rig_runtime.rs  session.rs  shell.rs  task_run.rs  tool_result.rs  tui.rs
src/skills/: mod.rs
src/tools/: browser.rs  code.rs  file.rs  file_search.rs  graph.rs  mod.rs  search.rs  terminal.rs
